--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx babel js/main.es6.js --watch --out-file js/dist/main.js"
+    "build": "npx babel js/main.es6.js --watch --out-file js/dist/main.js",
+    "handlebar-compile": "npx handlebars js/src/template/project.handlebars -f js/dist/project-template.js"
   },
   "repository": {
     "type": "git",
