--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "babel-plugin-iife-wrap": "^1.1.0"
+    "babel-plugin-iife-wrap": "^1.1.0",
+    "handlebars": "^4.0.12"
   },
   "babel": {
     "presets": [
       "@babel/preset-env"
     ],
-    "plugins": ["iife-wrap"]
+    "plugins": [
+      "iife-wrap"
+    ]
   }
 }
