--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx babel js/main.es6.js --watch --out-file js/dist/main.js",
-    "handlebar-compile": "npx handlebars js/src/template/project.handlebars -f js/dist/project-template.js"
+    "build": "npm run-script less-compile && npm run-script handlebar-compile && npm run-script babel-compile",
+    "handlebar-compile": "npx handlebars js/src/template/project.handlebars -f js/dist/project-template.js",
+    "babel-compile": "npx babel js/main.es6.js --watch --out-file js/dist/main.js",
+    "less-compile": "npx lessc less/main.less css/main.css"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,8 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-plugin-iife-wrap": "^1.1.0",
-    "handlebars": "^4.0.12"
+    "handlebars": "^4.0.12",
+    "less": "^3.8.1"
   },
   "babel": {
     "presets": [
